# Nanosaur

./: .editorconfig  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  C_as_CXX.cmake  Game.rsrc  LICENSE.md  README.md  build.py  copydlls.bat  nsaur.sln  nsaur.vcxproj  nsaur.vcxproj.filters  setup_project.py
.github/: FUNDING.yml
.github/workflows/: FullCompileCheck.yml  QuickCompileCheck.yml  ReleaseBuilds-aarch64.yml  ReleaseBuilds.yml
Data/Audio/: GameSong.aiff  Main.sounds.rsrc  Menu.sounds.rsrc  Song_Pangea  TitleSong.aiff
Data/Images/: Boot1.PICT  Boot1.tga  Boot1Pro.PICT  Boot1Pro.tga  Boot2.PICT  Boot2.tga  Charity1.pict  Charity1.tga  Charity3.PICT  Charity3.tga  Help1.PICT  Help1.tga  Help2.PICT  Help2.tga  Infobar.pict  Infobar.tga  Map.tga  Shadow.tga
Data/Models/: Global_Models.3dmf  HighScores.3dmf  Infobar_Models.3dmf  Level1_Models.3dmf  MenuInterface.3dmf  Title.3dmf
Data/Movies/: Win.mov
Data/Skeletons/: Deinon.skeleton.rsrc  DeinonTeethFix.3dmf  Diloph.skeleton.rsrc  Diloph_Fin.3df  Me.3df  New T-REX_Finished.3df  Ptera.3dmf  Ptera.skeleton.rsrc  Rex.skeleton.rsrc  Stego.3dmf  Stego.skeleton.rsrc  Tricer.skeleton.rsrc  Triceratops.3df
Data/Sprites/: Infobar.frames.rsrc  Infobar1000.tga  Infobar1001.tga  Infobar1002.tga  Infobar1003.tga  Infobar1004.tga  Infobar1005.tga  Infobar1006.tga  Infobar1007.tga  Infobar1008.tga  Infobar1009.tga  Infobar1010.tga  Infobar1011.tga  Infobar1012.tga  Infobar1013.tga  Infobar1014.tga  Infobar1015.tga  Infobar1016.tga  Infobar1017.tga  Infobar1018.tga  Infobar1019.tga  Infobar1020.tga  Infobar1021.tga  Infobar1022.tga  Infobar1023.tga  Infobar1024.tga  Infobar1025.tga  Infobar1026.tga  Infobar1027.tga  Infobar1028.tga  Infobar1029.tga  Infobar1030.tga  Infobar1031.tga  Infobar1032.tga  Infobar1033.tga  Infobar1034.tga  Infobar1035.tga  Infobar1036.tga  Infobar1037.tga  Infobar1038.tga  (+11 more)
Data/System/: Application.rsrc
Data/Terrain/: Level1.ter  Level1.trt  Level1Pro.ter
cmake/: FindSDL2.cmake  ReadMeWin32.txt.in  version.h.in
docs/: About Nanosaur Extreme.md  Nanosaur Game Engine Docs.md
osxppc/: .gitignore  README.md  mkppcapp.py  mkppcmakefile.py  mksdl.sh  sdl-tiger.patch
packaging/: AppRun  Nanosaur.exe.rc  Nanosaur.icns  ReadMe-Win32.txt.in  ReadMe.txt.in  gon-config.json  io.jor.nanosaur.appdata.xml  io.jor.nanosaur.desktop  nanosaur.desktop  win32.rc.in
packaging/mainmenu.nib/: designable.nib  keyedobjects.nib
src/: Backdrop.cpp  Boot.cpp  FindEmbeddedGameData.cpp  FindGameData.cpp  FindGameData.h  GLBackdrop.cpp  GLBackdrop.h  GLFunctions.cpp  GLFunctions.h  GamePatches.cpp  GamePatches.h  Main.cpp  OpenDialog_Windows.cpp  OpenDialog_macOS.mm  Qut.h  QutInternal.h  QutWindows.cpp  SettingsScreen.cpp  StructUnpackers.cpp  nsaur.cpp  structformats.h
src/Enemies/: Enemy.c  Enemy_Ptera.c  Enemy_Rex.c  Enemy_Spitter.c  Enemy_Stego.c  Enemy_TriCer.c
src/Glue/: Backdrop.cpp  EdgePadding.cpp  FrustumCulling.c  GLFunctions.cpp  GamePatches.cpp  Patch3DMFModels.c  Pomme3DMF_API.cpp  Pomme3DMF_Parser.cpp  ProMode.c  SettingsScreen.cpp
src/Headers/: 2dbackdrop.h  3dmf.h  camera.h  collision.h  effects.h  enemy.h  environmentmap.h  file.h  game.h  globals.h  highscores.h  infobar.h  input.h  main.h  misc.h  mobjtypes.h  objects.h  player_control.h  pool.h  qd3d_geometry.h  qd3d_support.h  renderer.h  selfrundemo.h  skeletonanim.h  skeletonjoints.h  skeletonobj.h  sound2.h  sprites.h  structformats.h  structs.h  terrain.h  tga.h  title.h  version.h  version.h.in  window.h  windows_nano.h
src/Items/: Effects.c  Items.c  Pickups.c  TimePortal.c  Traps.c  Triggers.c
src/Player/: MyGuy.c  Player_Control.c  Weapons.c
src/QD3D/: 2DBackdrop.c  3DMF.c  3DMath.c  Camera.c  EnvironmentMap.c  FrustumCulling.c  Pomme3DMF_API.cpp  QD3DMath.cpp  QD3D_Geometry.c  QD3D_Support.c  Renderer.c
src/Screens/: HighScores.c  Infobar.c  MainMenu.c  Movie.cpp  SettingsScreen.c  SettingsScreen.cpp  Title.c
src/Skeleton/: Bones.c  SkeletonAnim.c  SkeletonJoints.c  SkeletonObj.c
src/System/: Collision.c  File.c  Input.c  Main.c  Misc.c  Objects.c  Objects2.c  Pool.c  ProMode.c  Sound.c  Sprites.c  TGA.c  Window.c  Windows.c  input.c
src/Terrain/: Terrain.c  Terrain2.c
src/game/: 3DMF.c  3DMath.c  3dmath.h  3dmf.h  Bones.c  Camera.c  Collision.c  Effects.c  Enemy.c  Enemy_Alien.c  Enemy_Insect.c  Enemy_Ptera.c  (+81 more)
src/pomme/: AIFF.cpp  ARGBPixmap.cpp  BigEndianIStream.cpp  CMakeLists.txt  Files.cpp  FixedPool.h  Graphics.cpp  GrowablePool.h  IEEEExtended.c  IMA4.cpp  MACE.cpp  Memory.cpp  PICT.cpp  PascalStringHack.h  Pomme.cpp  Pomme.h  PommeDebug.cpp  PommeDebug.h  PommeEnums.h  PommeFiles.cpp  PommeFiles.h  PommeGraphics.h  PommeInit.h  PommeInput.h  PommeInternal.h  PommeSound.h  PommeTime.h  PommeTypes.h  PommeVideo.h  QD2D.cpp  QD3D.cpp  Resources.cpp  SoundManager.cpp  SysFont.h  TimeManager.cpp  WinInput.cpp  cmixer.cpp  cmixer.h  membuf.cpp  membuf.h  (+3 more)
src/pomme/CompilerSupport/: filesystem.h  span.h  span_implementation.hpp
src/pomme/Files/: ArchiveVolume.cpp  ArchiveVolume.h  Files.cpp  HostVolume.cpp  HostVolume.h  Resources.cpp  Volume.h
src/pomme/Graphics/: ARGBPixmap.cpp  Color.cpp  Graphics.cpp  PICT.cpp  QD3D.cpp  SysFont.h  SystemPalettes.cpp
src/pomme/Input/: SDLInput.cpp
src/pomme/Memory/: Memory.cpp
src/pomme/Platform/Windows/: PommeWindows.cpp  PommeWindows.h
src/pomme/Sound/: AIFF.cpp  DumpAU.h  IMA4.cpp  MACE.cpp  SoundManager.cpp  cmixer.cpp  cmixer.h  xlaw.cpp
src/pomme/Time/: TimeManager.cpp
src/pomme/Utilities/: BigEndianIStream.cpp  BigEndianIStream.h  FixedPool.h  GrowablePool.h  IEEEExtended.cpp  IEEEExtended.h  PascalStringHack.h  StringUtils.cpp  StringUtils.h  memstream.cpp  memstream.h  structpack.cpp  structpack.h
src/pomme/Video/: Cinepak.cpp  Cinepak.h  moov.cpp
src/pomme/maconv/stuffit/: methods.h
src/pomme/maconv/stuffit/methods/: arsenic.cc  arsenic.h
src/pomme/maconv/stuffit/utils/: bwt.cc  bwt.h  crc.cc  crc.h
src/pomme/maconv/utils/: bit_reader.cc  bit_reader.h
unused/: NanoPrefix_Charity2MB.h  NanoPrefix_Charity4MB.h  Terrain.c new
(+59 files in other folders)
